--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "imagesloaded": "^5.0.0",
     "isotope-layout": "^3.0.6",
     "lenis": "^1.3.11",
-    "next": "15.5.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "16.0.1",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-modal": "^3.16.3",
     "react-player": "^3.3.3",
     "react-toastify": "^11.0.5",
@@ -32,11 +32,15 @@
     "@types/imagesloaded": "^4.1.7",
     "@types/isotope-layout": "^3.0.15",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
     "@types/react-modal": "^3.16.3",
     "eslint": "^9",
-    "eslint-config-next": "15.5.3",
+    "eslint-config-next": "16.0.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2"
   }
 }
